<resources>
    <string name="app_name">Simple Weather</string>
    <string name="search_hint">Търси град по света...</string>
    <string name="btn_search">Търсене</string>
    <string name="unit_celsius">°C</string>
    <string name="unit_fahrenheit">°F</string>
    <string name="label_feels_like">Усеща се като %s</string>
    <string name="label_humidity">Влажност</string>
    <string name="label_pressure">Налягане</string>
    <string name="label_wind">Вятър</string>
    <string name="label_sunrise">Изгрев</string>
    <string name="label_sunset">Залез</string>
    <string name="label_updated">Обновено: %s</string>
    <string name="chip_sofia">София</string>
    <string name="chip_plovdiv">Пловдив</string>
    <string name="chip_varna">Варна</string>
    <string name="chip_burgas">Бургас</string>
    <string name="chip_shabla">Шабла</string>
</resources>
